test/files/neg/t5692a.check
Test_2.scala:2: error: type parameter not specified
  def x = Macros.foo
                 ^
one error found
